<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/include"
            layout="@layout/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/iv_invite"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginTop="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/invite_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_invite_friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/invite_friends"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="@+id/iv_invite"
                    app:layout_constraintStart_toStartOf="@+id/iv_invite"
                    app:layout_constraintTop_toBottomOf="@+id/iv_invite" />

                <TextView
                    android:id="@+id/tv_install_application"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/friends_install_application"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/_13sdp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_invite_friends"
                    app:layout_constraintStart_toStartOf="@+id/tv_invite_friends"
                    app:layout_constraintTop_toBottomOf="@+id/tv_invite_friends" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/invite_code"
                    android:padding="@dimen/_5sdp"
                    android:textSize="@dimen/_14sdp"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textColor="@color/colorPrimaryText"
                    android:fontFamily="@font/opensans_semibold"
                    app:layout_constraintEnd_toEndOf="@+id/tv_install_application"
                    app:layout_constraintStart_toStartOf="@+id/tv_install_application"
                    app:layout_constraintTop_toBottomOf="@+id/tv_install_application" />

                <TextView
                    android:id="@+id/tv_invite_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:text=""
                    android:textColor="@color/colorPrimaryText"
                    android:fontFamily="@font/opensans_semibold"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <Button
                    android:id="@+id/btn_invite_friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/invite_friends"
                    android:background="@drawable/rounded_btn"
                    android:fontFamily="@font/opensans_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_invite_code"
                    app:layout_constraintVertical_bias="1.0" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
